add images, icon, meta-tags, fonts

--- a/index.html
+++ b/index.html
@@ -1,10 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>
+      Мастер маникюра в Минске | Профессиональный маникюр и дизайн ногтей
+    </title>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="description"
+      content="Профессиональный мастер маникюра в Минске предлагает услуги классического и аппаратного маникюра, педикюра, гель-лака и дизайна ногтей."
+    />
+    <!-- Авторство и контактная информация -->
+    <meta
+      name="author"
+      content="Наталья Малявская - мастер маникюра в Минске"
+    />
+    <!-- замените example.com на реальный адрес вашего сайта -->
+    <link rel="canonical" href="https://example.com/" />
+    <!-- Open Graph для социальных сетей -->
+    <meta property="og:type" content="website" />
+    <!-- замените example.com на реальный адрес вашего сайта -->
+    <meta property="og:url" content="https://example.com/" />
+    <meta
+      property="og:title"
+      content="Мастер маникюра в Минске | Профессиональный маникюр и дизайн ногтей"
+    />
+    <!-- вставьте ссылку на логотип или изображение -->
+    <meta property="og:image" content="https://example.com/images/logo.png" />
+    <meta
+      property="og:description"
+      content="Профессиональный мастер маникюра в Минске предлагает услуги классического и аппаратного маникюра, педикюра, гель-лака и дизайна ногтей."
+    />
+    <!-- Фавиконки -->
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
